# VentilationSystem_1.0

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  settings.json
.github/workflows/: ci.yml
src/: app.py  ventilation.py
